<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gwladys.trombinoscope.ModifPersonneActivity">
    <item
        android:id="@+id/retour"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="@string/retour"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/parcourir"
        android:icon="@android:drawable/stat_sys_download"
        android:orderInCategory="100"
        android:title="@string/parcourir"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/modif"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/action_modif"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/suppression"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/action_suppression"
        app:showAsAction="ifRoom" />
</menu>
