<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gwladys.trombinoscope.ModifPersonneActivity">
    <item
        android:id="@+id/retour"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="@string/retour"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/parcourir"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="100"
        android:title="@string/parcourir"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ajout"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/action_ajout"
        app:showAsAction="ifRoom" />
</menu>
