<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/conteneur_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gwladys.trombinoscope.ModifPersonneActivity">

    <android.support.design.widget.AppBarLayout android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/photoPersonneAjout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:drawable/stat_notify_error"
                android:contentDescription="@string/todo"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/menu_ajout"/>

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.v7.widget.ActionMenuView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_scrollFlags="scroll|enterAlwaysCollapsed" >

        <EditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/subsitut_nom"
            android:id="@+id/nomTexteAjout"
            android:layout_marginBottom="3dp"
            android:textSize="24sp"/>

        <EditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/subsitut_prenom"
            android:id="@+id/prenomTexteAjout"
            android:layout_marginBottom="3dp"
            android:textSize="24sp"/>

        <EditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/substitut_tel"
            android:id="@+id/numTelTexteAjout"
            android:layout_marginBottom="3dp"
            android:textSize="24sp"/>

        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/substitut_courriel"
            android:id="@+id/courrielTexteAjout"
            android:layout_marginBottom="3dp"
            android:textSize="24sp"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>